create header of the website

--- a/index.html
+++ b/index.html
@@ -3,13 +3,28 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>JS, Lesson-1</title>
+  <title>Movie Man</title>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Livvic:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
+<body class="page-body">
+
+  <header class="site-header">
+    <div class="container header-container">
+      <a class="site__logo-link" href="index.html">
+        <img class="site__logo-img" src="img/movie-logo.png" alt="Logo" width="75" height="67">
+      </a>
+
+      <div class="site-header__buttons">
+        <button type="button" class="site-header__button bookmark-btn">Bookmarks</button>
+        <button type="button" class="site-header__button">Log in</button>
+        <button type="button" class="site-header__button">Sign up</button>
+      </div>
+    </div>
+  </header>
+  <main class="site-main"></main>
   
 
   <script src="js/jquery-3.5.1.min.js"></script>
