--- a/index.html
+++ b/index.html
@@ -24,7 +24,23 @@
       </div>
     </div>
   </header>
-  <main class="site-main"></main>
+  <main class="site-main">
+    <form class="search-form" action="#">
+      <input type="text" placeholder="Enter the title" name="title" aria-label="movie-title" value="title" autocomplete="off">
+      <input type="text" placeholder="Enter the year" name="year" aria-label="movie-year" value="year" autocomplete="off">
+      <select name="movie-category" id="category">
+        <option value="initial" selected disabled>Choose category</option>
+      </select>
+      <select name="movie-category" id="category">
+        <option value="initial" selected disabled>Rating</option>
+      </select>
+      <button class="search-btn" type="submit">Search</button>
+    </form>
+
+    <ul class="sort-list"></ul>
+
+    <ul class="movies-list"></ul>
+  </main>
   
 
   <script src="js/jquery-3.5.1.min.js"></script>
