--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <input class="title-input" type="text" placeholder="Enter the title" name="title" aria-label="movie-title" autocomplete="off">
         <input class="year-input" type="number" placeholder="year" name="year" aria-label="movie-year" min="1900">
         <select class="category-select" name="movie-category" id="category">
-          <option value="initial" selected disabled>Choose category</option>
+          <option value="initial" selected>All categories</option>
         </select>
         <select class="rating-select" name="movie-rating" id="rating">
           <option value="initial" selected disabled>Rating</option>
@@ -109,5 +109,5 @@
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/movies-new.js"></script>
     <script src="js/main.js"></script>
-  </body>
+  </body>1
   </html>
