add sorting feature

--- a/index.html
+++ b/index.html
@@ -38,7 +38,12 @@
     <div class="container">      
       <div class="lists-wrapper">
         <div class="sort-list">
-          <button class="sort-item">A-Z</button>
+          <button class="sort-item az-button" data-value="az">A-Z</button>
+          <button class="sort-item za-button" data-value="za">Z-A</button>
+          <button class="sort-item older-button" data-value="older">Older</button>
+          <button class="sort-item newer-button" data-value="newer">Newer</button>
+          <button class="sort-item lower-button" data-value="lower-rating">Lower rating</button>
+          <button class="sort-item higher-button" data-value="higher-rating">Higher rating</button>
         </div>
         
         <div class="movies-list-wrapper">
