add sorting feature

--- a/index.html
+++ b/index.html
@@ -68,11 +68,8 @@
   </main>
 
   <section class="modal-section d-none">
-    <h3 class="modal-tile h4"></h3>
+    <h3 class="modal-title h4"></h3>
     <p class="modal-summary"></p>
-    <ul class="modal-categories">
-      <li class="modal-category alert-secondary"></li>
-    </ul>
     <div class="modal-info">
       <div class="modal-duration">
         <span>Duration:</span>
@@ -82,7 +79,7 @@
         <span>mins</span>
       </div>
   
-      <div class="modal-lang">
+      <div class="modal-lang-wrapper">
         <span>Language:</span>
         <span class="modal-lang"></span>
       </div>
